--- a/MyApplication7/app/src/main/res/layout/activity_catalog_adapter.xml
+++ b/MyApplication7/app/src/main/res/layout/activity_catalog_adapter.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_margin="16dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -12,4 +11,5 @@
         android:layout_height="200dp"
         android:scaleType="centerCrop"
         android:src="@drawable/image1" />
-</LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
