--- a/MyApplication7/app/src/main/res/values/colors.xml
+++ b/MyApplication7/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="stroke_color">#FF6200EE</color>
+    <color name="card_background_color">#FFFFFFFF</color>
+    <color name="title_text_color">#FF000000</color>
+    <color name="body_text_color">#FF666666</color>
 </resources>
